=======
CHANGES
=======

3.7.0 (unreleased)
------------------

- Initial release extracted from `zope.app.generations`.